Added websocket support for hello-world example.  Basic page-space websocket implementation.

--- a/examples/hello-world/hw-server.html
+++ b/examples/hello-world/hw-server.html
@@ -2,6 +2,9 @@
 
 <head>
 <title>FlyWeb Hello World - Server</title>
+<script type="text/javascript" src="stream-reader.js"></script>
+<script type="text/javascript" src="sha-1.js"></script>
+<script type="text/javascript" src="web-socket.js"></script>
 <script type="text/javascript" src="hello-world.js"></script>
 <link href="hello-world.css" rel="stylesheet" type="text/css" />
 </head>
